# claude-aws-manager

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 57f0fe8dd206_phase_2_core_schema.py  a1b2c3d4e5f6_phase_5_inference_profiles.py  b2c3d4e5f6a7_phase7_usage_pricing.py  c3d4e5f6a7b8_add_request_defaults.py  d4e5f6a7b8c9_pending_key_retrieval.py
backend/app/: config.py  main.py  seed.py
backend/app/api/: auth.py  cost_centres.py  health.py  key_requests.py  keys.py  usage.py  users.py
backend/app/core/: audit.py  deps.py  request.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  _mixins.py  audit_log.py  cost_centre.py  cost_centre_owner.py  global_setting.py  inference_profile.py  key.py  key_request.py  pricing_cache.py  usage_snapshot.py  user.py
backend/app/schemas/: auth.py  cost_centre.py  key.py  key_request.py  usage.py  user.py
backend/app/services/: pricing.py  provisioning.py  usage_poller.py
backend/app/services/aws/: __init__.py  base.py  mock.py  real.py  usage.py
backend/tests/: conftest.py  test_auth.py  test_aws_mock.py  test_cost_centres.py  test_health.py  test_key_requests.py  test_keys.py  test_migrations.py  test_rbac.py  test_security.py  test_usage.py
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: REQUIREMENTS.md  data-model.md  design-decisions.md  design.md  implementation-log.md  implementation-plan.md  requirements-visualisation.html  requirements.md  (+2 more)
(+57 files in other folders)
