[project]
name = "claude-aws-manager-backend"
version = "0.1.0"
description = "Backend API for the Claude Code AWS Bedrock Manager — self-service provisioning and governance of Claude Code access via AWS Bedrock."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.34,<0.35",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy>=2.0,<2.1",
    "alembic>=1.14,<2",
    "psycopg[binary]>=3.2,<4",
    "pyjwt>=2.10,<3",
    "bcrypt>=4.2,<5",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "httpx>=0.28,<0.29",
    "freezegun>=1.5,<2",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (e.g. full Alembic migration round-trips)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
